--- a/public/styles/site/variables.less
+++ b/public/styles/site/variables.less
@@ -1,3 +1,18 @@
 // Override Bootstrap variables in this file, e.g.
 
-@font-size-base: 14px;
+@font-size-base: 16px;
+
+//Colors
+@black: #1a1a1a;
+@fireOrange: #ff3e00;
+@clay: #ff5119;
+@brown: #521502;
+@gray: #eaeaea;
+@lightBlue: #b1ffec;
+@bluegreen: #521502;
+@white: #fff;
+
+@git: @white;
+@facebook: #3a5795;
+@twitter: #55acee;
+@linkedin: #0878b5;
