add ref to links.. duhhh

--- a/templates/views/UnderConstruction.hbs
+++ b/templates/views/UnderConstruction.hbs
@@ -26,22 +26,22 @@
 			<p>Oops it seems that Jose is not done building, check back later!</p>
 			<ul class="socialMedia">
 				<li>
-					<a class="git">
+					<a class="git" href="https://github.com/jpramirezpra">
 						<i class="fa fa-github"></i>
 					</a>
 				</li>
 				<li>
-					<a class="face">
+					<a class="face" href="https://www.facebook.com/jose.ramirezpradilla">
 						<i class="fa fa-facebook"></i>
 					</a>
 				</li>
 				<li>
-					<a class="twitter">
+					<a class="twitter" href="https://twitter.com/jprampra">
 						<i class="fa fa-twitter"></i>
 					</a>
 				</li>
 				<li>
-					<a class="linked">
+					<a class="linked" href="https://www.linkedin.com/profile/view?id=143409072">
 						<i class="fa fa-linkedin"></i>
 					</a>
 				</li>
