default text on select

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -408,7 +408,7 @@
 								<div class="ui selection dropdown">
 									<input type="hidden" name="enquiryType" value="{{formData.enquiryType}}">
 									<i class="dropdown icon"></i>
-									<div class="default text">test</div>
+									<div class="default text">Type</div>
 									<div class="menu">
 										{{#each enquiryTypes}}
 											<div class="item" data-value="{{value}}">{{label}}</div>
