--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -442,7 +442,7 @@
 							<i class="github icon"></i>
 							jpramirezpra
 						</a>
-						<a href="www.linkedin.com/in/jprampra">
+						<a href="https://www.linkedin.com/in/jprampra">
 							<i class="linkedin icon"></i>
 							in/jprampra
 						</a>
