--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -68,7 +68,7 @@
 							<a class="twitter" href="https://twitter.com/jprampra">
 								<i class="twitter icon"></i>
 							</a>
-							<a class="linked" href="www.linkedin.com/in/jprampra">
+							<a class="linked" href="https://www.linkedin.com/in/jprampra">
 								<i class="linkedin icon"></i>
 							</a>
 						</div>
