remove broken links for now

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -44,8 +44,8 @@
 					</div> -->
 
 					<div class="right menu">
-						<a href="/Project" class="ui item">Projects</a>
-						<a href="/Blog" class="ui item">Blog</a>
+						<!-- <a href="/Project" class="ui item">Projects</a>
+						<a href="/Blog" class="ui item">Blog</a> -->
 					</div>
 				</div>
 			</div>
